# 3d-talking

./: README.md  download_hf.py  run_animate_lam.py  track_flame_params.py
ehm_tracker/: tracking_flame_only.py
ehm_tracker/assets/Docs/: run_download_examples.sh  run_download_pretrained.sh
ehm_tracker/assets/MANO/: selected_hand_ver.npy
ehm_tracker/src/: build_lmdb_dataset.py  data_prepare_pipeline.py  flame_only_pipeline.py  split_dataset.py  tracking_single_image.py
ehm_tracker/src/configs/: argument_config.py  base_config.py  crop_config.py  data_prepare_config.py
ehm_tracker/src/losses/: __init__.py  lmk2d_loss.py  pose_loss.py
ehm_tracker/src/utils/: camera.py  crop.py  cropper.py  draw.py  (+11 more)
lam/: README.md  __init__.py  pyproject.toml
lam/encoder/: __init__.py  base.py  dinov2_fusion_wrapper.py  dinov2_wrapper.py
lam/flame/: __init__.py  lbs.py  model.py
lam/gaussian/: __init__.py  model.py  renderer.py
lam/inference/: __init__.py  run_lam_repo.py
lam/io/: __init__.py  image.py  motion.py  video.py
lam/model/: __init__.py  full_lam.py  lam.py  transformer.py
lam/pipeline/: __init__.py  animation.py
lam/rendering/: __init__.py  gaussian_model.py  gs_renderer.py
lam/rendering/flame_model/: flame.py
lam/rendering/utils/: utils.py
lam/tests/: test_flame.py  test_pipeline.py
lam/utils/: __init__.py  camera_utils.py  config_utils.py  math_utils.py
smirk/: demo.py
smirk/utils/: mediapipe_utils.py
utils/: __init__.py  config_utils.py  create_manifest.py  download_yt.py  extract_wav.py  extract_wav_vox2.py  filter_speaker.py  test_filename_conversion.py  test_model.py  test_pytorch3d.py  test_set
(+39 files in other folders)
